# Satellite-Tracker

./: .gitignore  .gitmodules  Ausgabe.txt  CMakeLists.txt  GregorianCalendar.cpp  GregorianCalendar.h  README.md  SONATE.txt  contact_time.cpp  contact_time.h  main_3_2_b.cpp  main_3_3.cpp  main_calculation.cpp  main_contact.cpp  main_position.cpp  position.cpp  position.h  sat_calculation.h
cal/: GregorianCalendar.cpp  GregorianCalendar.h
calc/: sat_calculation.cpp  sat_calculation.h
calendar/: GregorianCalendar.cpp  GregorianCalendar.h
contact/: contact_time.cpp  contact_time.h
pos/: position.cpp  position.h
